# FastApi_books

./: .env.example  Dockerfile  LICENSE  alembic.ini  docker-compose.yml  email_test.py  main.py  pyproject.toml  requirements.txt  runner.py
.github/workflows/: main.yml
frontend/templates/: book_edit.html  book_form_index.html  delete_book.html  form_index.html  get_book.html  get_books.html  index.html  tag_form_index.html
frontend/templates/includes/: menu.html
frontend/templates/users/: login.html  profile.html  register.html
src/: main.py  menu.py
src/core/: app.py  config.py  main.py  routers.py  routers_core.py  schemes.py  services.py  urls.py  utils.py
src/core/config/: config.py  models.py
src/core/menu/: urls.py
src/core/middlewares/: users.py
src/core/pydantic_schemas/: schemas.py
src/core/redis/: books_cache.py  utils.py
src/database_data/: database.py  db_orm.py  models.py  settings.py
src/database_data/models/: models.py
src/frontend/templates/: book_edit.html  book_form_index.html  delete_book.html  get_book.html  get_books.html  tag_form_index.html
src/init_data/: models.py
src/migrations/: env.py
src/migrations/versions/: 130f3559bfe7_.py  67cf0d0e66ad_.py  6d7c693dd718_.py  81d369a8596f_.py  c9061cd185c7_.py  dd7aa1ae4ad3_.py  f8c551ef54e2_.py
src/services/: Pagination_text.py
src/users/: autentification.py  auth_pyjwt.py  services.py  user_config.py  user_models.py  user_orm.py  user_scheme.py  utils.py
src/utils/: BookDownloader.py  Pagination_text.py  TextLoad.py  User_data.py  db_utils.py
(+40 files in other folders)
