[project]
name = "fastapi-books"
version = "0.06"
description = ""
authors = [
    {name = "Marsel",email = "hasanovmarsel26@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "fastapi-pagination (>=0.12.34,<0.13.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
